# Bot_Memoriales

./: .dockerignore  .gitignore  DOCKER_CHECKLIST.md  Dockerfile  INSTALACION.md  QUICKSTART_DOCKER.md  README.md  README_DOCKER.md  README_EJECUCION.md  cases.json  config.py  docker-compose.yml  docker-run.bat  docker-run.sh  ejecutar_mejorado.bat  env_example.txt  instalar_dependencias.bat  limpiar_e_instalar.bat  logger.py  main.py  pyproject.toml  requirements.txt
automatizacion/: crear_tarea_8am_5pm.bat  crear_tarea_avanzada.ps1  crear_tarea_avanzada_fixed.ps1  crear_tarea_simple.ps1  crear_tarea_windows.bat  gestionar_tarea.bat
core/: API_Consumo.py  API_Modelos.py  API_parser.py  db_Connection.py  dcryptCsharp.py  descargaPlantillaSFTP.py  email_service copy.py  email_service.py  estado_service.py  horario_laboral.py  processing_service.py  processing_serviceOri.py  repository.py
logs/: .gitkeep
tests/: test_api_logging.py  test_config_debug_logs.py  test_consumo.py  test_estado_service.py  test_limpieza_archivos.py  test_logs_por_fecha.py  test_validacion_correo_juzgado.py  test_validaciones.py
