[project]
name = "bot-memoriales"
version = "1.0.0"
description = "Bot RPA para gestión automatizada de memoriales"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyodbc==5.0.1",
    "paramiko==3.4.0",
    "cryptography==41.0.7",
    "pycryptodome==3.19.1",
    "pandas==2.1.4",
    "numpy==1.24.4",
    "requests==2.31.0",
    "pytz==2023.3",
    "holidays==0.34",
    "python-dotenv==1.0.0",
    "openpyxl==3.1.2",
    "colorama==0.4.6",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "black==23.11.0",
    "flake8==6.1.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | vScrap_clean
  | __pycache__
)/
'''

[tool.flake8]
max-line-length = 79
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "vScrap_clean",
    "build",
    "dist",
]

